<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="url">http://172.22.1.225:8084/mobisoftpos/</string>
    <string name="app_name">Mobisoft POS</string>
    <string name="action_settings">Settings</string> 
    <string name="sales">Sale</string>
    <string name="stock">Stock</string> 
    <string name="quantity">Quantity</string>
    <string name="receivables">Receiveables</string>
    <string name="returns">Returns</string>
    <string name="visits">Visits</string>
    <string name="itemname">Item</string>
    <string name="info">Info</string>
    <string name="login">Login</string>
    <string name="customers">Customers</string>  
    <string name="new_customer">New Customer</string>
    <string name="customer_name">Name</string>
    <string name="name_hint">Name of Person</string>
    <string name="company_name">Company Name</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="mobile_hint">Cell Phone No</string>
    <string name="gps_tag">GPS Tag</string>
    <string name="street_location">Street/Location</string>
    <string name="street_hint">Street Name</string>
    <string name="area">Area</string>
    <string name="city">City</string>
    <string name="email">Email</string>    
    <string name="save">Save</string>
    <string name="splash_title">Mobisoft POS Solution</string>
    <string name="product_stocks">Product Stocks</string>
    <string name="current_customers">Current Customers</string>
</resources>
