<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#FFFFFF" >

    <TableLayout
        android:id="@+id/layout_tl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="3dp"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ll_sales"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:orientation="vertical"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/imgv_btn1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/sales" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sales"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_stock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:orientation="vertical"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/imgv_btn2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/stock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stock"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ll_receivables"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:orientation="vertical"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/imgv_btn3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/receivables" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receivables"
                    android:textAppearance="?android:attr/textAppearance" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_returns"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:orientation="vertical"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/imgv_btn4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/returns" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/returns"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center" >

            <LinearLayout
                android:id="@+id/ll_visits"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:orientation="vertical"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/imgv_btn5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/visits" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visits"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:clickable="true"
                android:gravity="center"
                android:onClick="onViewClicked"
                android:orientation="vertical"
                android:padding="3dp" >

                <ImageView
                    android:id="@+id/imgv_btn6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>
        </TableRow>
    </TableLayout>

</ScrollView>